fixed overflow issue

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -189,8 +189,11 @@ sup {
 .post-aside {
 	padding: 1rem 5%;
 	flex-basis: 20%;
-	
 	@include bp(m){
 		padding: 0;
 	}
+}
+
+.ad {
+	overflow-x: hidden;
 }
